@@ -30,11 +30,7 @@ namespace fastonosql {
 namespace {
 
 const std::vector<Field> lmdbCommonFields = {
-  Field(LMDB_CAMPACTIONS_LEVEL_LABEL, common::Value::TYPE_UINTEGER),
-  Field(LMDB_FILE_SIZE_MB_LABEL, common::Value::TYPE_UINTEGER),
-  Field(LMDB_TIME_SEC_LABEL, common::Value::TYPE_UINTEGER),
-  Field(LMDB_READ_MB_LABEL, common::Value::TYPE_UINTEGER),
-  Field(LMDB_WRITE_MB_LABEL, common::Value::TYPE_UINTEGER)
+  Field(LMDB_FILE_NAME_LABEL, common::Value::TYPE_STRING)
 };
 
 }  // namespace
@@ -63,7 +59,7 @@ std::vector<std::vector<Field> > DBTraits<LMDB>::infoFields() {
 namespace lmdb {
 
 LmdbServerInfo::Stats::Stats()
-  : compactions_level(0), file_size_mb(0), time_sec(0), read_mb(0), write_mb(0) {
+  : file_name() {
 }
 
 LmdbServerInfo::Stats::Stats(const std::string& common_text) {
@@ -72,37 +68,21 @@ LmdbServerInfo::Stats::Stats(const std::string& common_text) {
   size_t start = 0;
 
   while ((pos = src.find(MARKER, start)) != std::string::npos) {
-      std::string line = src.substr(start, pos-start);
-      size_t delem = line.find_first_of(':');
-      std::string field = line.substr(0, delem);
-      std::string value = line.substr(delem + 1);
-      if (field == LMDB_CAMPACTIONS_LEVEL_LABEL) {
-          compactions_level = common::convertFromString<uint32_t>(value);
-      } else if (field == LMDB_FILE_SIZE_MB_LABEL) {
-          file_size_mb = common::convertFromString<uint32_t>(value);
-      } else if (field == LMDB_TIME_SEC_LABEL) {
-          time_sec = common::convertFromString<uint32_t>(value);
-      } else if (field == LMDB_READ_MB_LABEL) {
-          read_mb = common::convertFromString<uint32_t>(value);
-      } else if (field == LMDB_WRITE_MB_LABEL) {
-          write_mb = common::convertFromString<uint32_t>(value);
-      }
-      start = pos + 2;
+    std::string line = src.substr(start, pos-start);
+    size_t delem = line.find_first_of(':');
+    std::string field = line.substr(0, delem);
+    std::string value = line.substr(delem + 1);
+    if (field == LMDB_FILE_NAME_LABEL) {
+      file_name = value;
+    }
+    start = pos + 2;
   }
 }
 
 common::Value* LmdbServerInfo::Stats::valueByIndex(unsigned char index) const {
   switch (index) {
   case 0:
-    return new common::FundamentalValue(compactions_level);
-  case 1:
-    return new common::FundamentalValue(file_size_mb);
-  case 2:
-    return new common::FundamentalValue(time_sec);
-  case 3:
-    return new common::FundamentalValue(read_mb);
-  case 4:
-    return new common::FundamentalValue(write_mb);
+    return new common::StringValue(file_name);
   default:
     NOTREACHED();
     break;
@@ -111,30 +91,26 @@ common::Value* LmdbServerInfo::Stats::valueByIndex(unsigned char index) const {
 }
 
 LmdbServerInfo::LmdbServerInfo()
-  : ServerInfo(ROCKSDB) {
+  : ServerInfo(LMDB) {
 }
 
 LmdbServerInfo::LmdbServerInfo(const Stats &stats)
-  : ServerInfo(ROCKSDB), stats_(stats) {
+  : ServerInfo(LMDB), stats_(stats) {
 }
 
 common::Value* LmdbServerInfo::valueByIndexes(unsigned char property, unsigned char field) const {
   switch (property) {
   case 0:
-      return stats_.valueByIndex(field);
+    return stats_.valueByIndex(field);
   default:
-      NOTREACHED();
-      break;
+    NOTREACHED();
+    break;
   }
   return NULL;
 }
 
 std::ostream& operator<<(std::ostream& out, const LmdbServerInfo::Stats& value) {
-  return out << LMDB_CAMPACTIONS_LEVEL_LABEL":" << value.compactions_level << MARKER
-              << LMDB_FILE_SIZE_MB_LABEL":" << value.file_size_mb << MARKER
-              << LMDB_TIME_SEC_LABEL":" << value.time_sec << MARKER
-              << LMDB_READ_MB_LABEL":" << value.read_mb << MARKER
-              << LMDB_WRITE_MB_LABEL":" << value.write_mb << MARKER;
+  return out << LMDB_FILE_NAME_LABEL ":" << value.file_name << MARKER;
 }
 
 std::ostream& operator<<(std::ostream& out, const LmdbServerInfo& value) {
@@ -153,12 +129,12 @@ LmdbServerInfo* makeLmdbServerInfo(const std::string &content) {
   DCHECK_EQ(headers.size(), 1);
 
   for (size_t i = 0; i < content.size(); ++i) {
-      word += content[i];
-      if (word == headers[0]) {
-          std::string part = content.substr(i + 1);
-          result->stats_ = LmdbServerInfo::Stats(part);
-          break;
-      }
+    word += content[i];
+    if (word == headers[0]) {
+      std::string part = content.substr(i + 1);
+      result->stats_ = LmdbServerInfo::Stats(part);
+      break;
+    }
   }
 
   return result;
